Fix: Home pack slider version mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -247,56 +247,68 @@
 .packs_container{
   display: flex;
   margin-top: 70px;
-  .pack{
-    margin-right: 59px;
-    padding: 90px 50px 40px;
-    width: 33%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    &:last-child{
-      margin-right: 0;
-    }
-    .pack_info{
+  width: 100%;
+  margin-left: 140px;
+  margin-right: 140px;
+  &::ng-deep .drag-scroll-content{
+    overflow: hidden;
+    height: fit-content;
+    .pack{
+      width: 30%;
+      margin-right: 5%;
+      border-radius: 10px;
       display: flex;
       flex-direction: column;
-      .pack_icon{
-        width: fit-content;
-        img{
-          max-width: 100%;
+      justify-content: space-between;
+      padding: 5%;
+      &:last-child{
+        margin-right: 0;
+      }
+
+      .pack_info{
+        display: flex;
+        flex-direction: column;
+        .pack_icon{
+          width: fit-content;
+          img{max-width: 100%;}
+        }
+        .pack_title{
+          color:$c-white;
+          margin-top: 20px;
+          font-family: "Montserrat Extrabold",sans-serif;
+          font-size: 40px;
+          white-space: break-spaces;
+        }
+        .pack_description{
+          white-space: pre-wrap;
+          color:$c-white;
+          font-family:"Montserrat Light",sans-serif;
+          font-size: 20px;
         }
       }
-      .pack_title{
-        color:$c-white;
-        margin-top: 20px;
-        font-family: "Montserrat Extrabold",sans-serif;
-        font-size: 40px;
-      }
-      .pack_description{
-        color:$c-white;
+
+      .pack_cta{
         font-family:"Montserrat Light",sans-serif;
-        font-size: 20px;
+        font-size: 15px;
+        border-radius: 5px;
+        text-align: center;
+        cursor: pointer;
+        letter-spacing: 1px;
+        padding: 19px;
+        text-decoration: none;
+        -webkit-transition: transform 0.2s ease-in;
+        -moz-transition: transform 0.2s ease-in;
+        -o-transition: transform 0.2s ease-in;
+        transition: transform 0.2s ease-in;
+        &:hover{
+          transform: scale(1.05);
+        }
       }
-    }
-    .pack_cta{
-      font-family:"Montserrat Light",sans-serif;
-      font-size: 15px;
-      border-radius: 5px;
-      text-align: center;
-      cursor: pointer;
-      letter-spacing: 1px;
-      padding: 19px;
-      text-decoration: none;
-      -webkit-transition: transform 0.2s ease-in;
-      -moz-transition: transform 0.2s ease-in;
-      -o-transition: transform 0.2s ease-in;
-      transition: transform 0.2s ease-in;
-      &:hover{
-        transform: scale(1.05);
-      }
-    }
+    } 
   }
 }
+
+
 .pack_blue{
   background: $c-deepBlue;
   height: 600px;
@@ -576,26 +588,17 @@
   .packs_container{
     margin-top: 50px;
     touch-action: pan-x;
-    .pack{
-      margin-right: 19px;
-      padding: 50px 30px 40px;
-      width: 50%;
-      .pack_info{
-        .pack_icon  img{
-          max-width: 75%;
-        }
-        .pack_title{
-          font-size: 30px;
-        }
-        .pack_description{
-          font-size: 14px;
-        }
+    margin-left: 20px;
+    &::ng-deep .drag-scroll-content .pack{
+      width: 80%;
+      padding: 7%;
+      &:last-child{
+        margin-right: 20px;
       }
-      .pack_cta{
-        padding: 10px 6px;
-        font-size: 12px;
+      .pack_info .pack_title{
+        font-size: 30px;
+        white-space: nowrap;
       }
-      
     }
   }
 
@@ -712,9 +715,14 @@
 
   .packs_container{
     width: 100%;
-    .pack{
-      margin-right: 21px;
-      padding: 90px 35px 35px;
+    &::ng-deep .drag-scroll-content .pack{
+      margin-right: 2%;
+      &:last-child{
+        margin-right: 0;
+      }
+      .pack_info .pack_title{
+        white-space: break-spaces;
+      }
     }
   }
 
